# skillkernel

./: .gitignore  .roomodes  README.md  SkillKernel_structure.txt  main.py  pyproject.toml  pytest_limiter.txt  Запуск телеграм бота.txt
.roo/rules/: 01-skillkernel-core.md
.roo/rules-sk-architect/: 01-role.md
.roo/rules-sk-builder/: 01-role.md
.roo/rules-sk-reviewer/: 01-role.md
.roo/rules-sk-scaffolder/: 01-role.md
.roo/skills/: CONVENTION.md
.roo/skills/_TEMPLATE/: README.md  SKILL.md
config/: platform.yaml
core/: __init__.py  config.py  confirm_manager.py  dispatcher.py  event_log.py  exceptions.py  executor.py  models.py  registry.py  router.py
entrypoints/cli/: adapter.py  main.py
entrypoints/telegram/: __init__.py  adapter.py  main.py
executors/: __init__.py  file_executor.py  registry.py
interfaces/: __init__.py  base.py  cli_adapter.py
runtime/: __init__.py  contract.py  handler.py
skills/: __init__.py  base.py
skills/demo_skill/: README.md  manifest.py  plugin.py
skills/farm_guardian/: __init__.py  manifest.py  plugin.py
skills/limiter/: __init__.py  capacity_engine.py  domain.py  examples.py  exporter.py  intents.py  manifest.py  parser.py  planner.py  plugin.py  preview.py  repository.py  validator.py
tests/: test_cli.py  test_dispatcher.py  test_models.py  test_router.py  test_runtime.py
tests/demo_skill/: test_plugin.py
tests/limiter/: conftest.py  test_capacity_engine.py  test_exporter.py  test_parser.py  test_planner.py  test_plugin.py  test_repository.py
tests/telegram/: test_adapter.py
(+10 files in other folders)
